		- nouvelle IA de test : Simplet
		- possibilité de tester l'agent hors-ligne
	- stats :
	- ressources :
		- thèmes SBM1 arena, circles, hal, power, speed & warp
		- tous les niveaux des modes histoire et arène
	- Divers :
		- nouveau thème pour le tournoi 5
		- nouveau tournoi pour la 5ème édition
		- mise à jour de l'année du copyright de 2010-2011 en 2011-2012
		
+ beta.022
	- nouvelles ia
	- nouveau tournoi
	- intégration de toutes les màj successives des version 21.x
	
+ beta.023
	- léger hasard dans le tirage au sort du temps des bombes menaçant les IA
	- léger hasard dans le tirage au sort de la puissance de ces mêmes bombes
	- nouveaux profils pour le tournoi 2012-13
	- correction du bug qui faisait que le panel "about" mettait deux plombes à s'afficher :
	  remplacement de JTextPane par JTextArea.
	
+ beta.024
 	- moteur :
 		- quelques bugs corrigés
		- système de mort subite inclus dans le moteur
	- GUI :
		- nouvelle option permettant d'activer/désactiver la mort subite sur une partie rapide
		- résolution du bug qui rendait l'apparition de menus modaux très lente
		- correction de certains menus modaux, toujours très lents
		- ajout des menus modaux manquant
		- correction de problèmes de traduction dans la version anglaise
	- ressources : 
		- TODO nettoyage des thèmes (moins d'images à charger, mutualisation/normalisation des fichiers xml)
		- morts subites dans les niveaux officiels de SBM1
		- outils de niveaux pour générer programmatiquement des morts subites typiques
		- thème pour le tournoi VI (à compléter)
		- niveaux pour le tournoi VI (à compléter)
	- API IA:
		- quelques bugs corrigés
		- méthode initOthers dans ArtificialIntelligence
		- vérification de l'unicité des noms de cas pour un agent
		- cache automatique pour le calcul de critères
		- vérification de l'unicité des noms de critère pour un agent
		- références stockées dans des maps différentes pour chaque mode
		- décomposition du traitement plus avancée dans le MoveHandler
		